js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunctionWithCrossModuleInliner/lib1/l1.0.kt
inline fun foo() = 0
